finished adding Markup

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <label for="url">url</label>
         <input type="text" name="url" id="url" placeholder="story url">
       </div>
-      <input type="submit" id="submit-btn">
+      <button type="submit">Submit</button>
     </form>
 
 
