updated UI with new story

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <nav>
     <div class="navbar-brand">
       <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
-      <a class="nav-link" href="#" id="submit">Submit</a>
+      <a class="nav-link hidden /" href="#" id="nav-submit">Submit</a>
     </div>
     <div class="nav-right">
       <a class="nav-link" href="#" id="nav-login">login/signup</a>
@@ -43,7 +43,7 @@
 
   <!-- area for stories (all stories, user stories, favorites) -->
   <section class="stories-container container">
-    <form action="" class="submit-form hidden">
+    <form action="" class="hidden" id="submit-form">
       <div class>
         <label for="author-name">Author</label>
         <input type="text" name="author-name" id="author-name" placeholder="author name">
