made edits to submit handler

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <nav>
     <div class="navbar-brand">
       <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
-      <a class="nav-link hidden /" href="#" id="nav-submit">Submit</a>
+      <a class="nav-link hidden main-nav-links" href="#" id="nav-submit">Submit</a>
     </div>
     <div class="nav-right">
       <a class="nav-link" href="#" id="nav-login">login/signup</a>
@@ -46,15 +46,15 @@
     <form action="" class="hidden" id="submit-form">
       <div class>
         <label for="author-name">Author</label>
-        <input type="text" name="author-name" id="author-name" placeholder="author name">
+        <input type="text" id="author-name" placeholder="author name">
       </div>
       <div>
           <label for="title">title</label>
-          <input type="text" name="title" id="title" placeholder="story titles">
+          <input type="text" id="title" placeholder="story titles">
       </div>
       <div>
         <label for="url">url</label>
-        <input type="text" name="url" id="url" placeholder="story url">
+        <input type="text" id="url" placeholder="story url">
       </div>
       <button type="submit">Submit</button>
     </form>
